# ros_named_logger

./: CMakeLists.txt  README.md  package.xml
src/: ros_named_logger_test.cpp
